update anomoaly detect, probability distributions, header files

--- a/header file.ipynb
+++ b/header file.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hands-On With Python\n",
+    "# Header File\n",
     "\n",
     "Here is both data files, read into a pandas data frame."
    ]
@@ -12,7 +12,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -156,121 +158,11 @@
     "import pandas as pd\n",
     "\n",
     "rentals_df = pd.read_csv('rentals.csv', encoding='latin-1')\n",
-    "rentals_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Station #</th>\n",
-       "      <th>Station Name</th>\n",
-       "      <th># of Racks</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1000</td>\n",
-       "      <td>Liberty Ave &amp; Stanwix St</td>\n",
-       "      <td>16</td>\n",
-       "      <td>40.441326</td>\n",
-       "      <td>-80.004679</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1001</td>\n",
-       "      <td>Forbes Ave &amp; Market Square</td>\n",
-       "      <td>19</td>\n",
-       "      <td>40.440877</td>\n",
-       "      <td>-80.003080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1002</td>\n",
-       "      <td>Third Ave &amp; Wood St</td>\n",
-       "      <td>15</td>\n",
-       "      <td>40.439030</td>\n",
-       "      <td>-80.001860</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1003</td>\n",
-       "      <td>First Ave &amp; Smithfield St (Art Institute)</td>\n",
-       "      <td>15</td>\n",
-       "      <td>40.437200</td>\n",
-       "      <td>-80.000375</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1004</td>\n",
-       "      <td>First Ave &amp; B St (T Station)</td>\n",
-       "      <td>15</td>\n",
-       "      <td>40.435887</td>\n",
-       "      <td>-79.997102</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Station #                               Station Name  # of Racks  \\\n",
-       "0       1000                   Liberty Ave & Stanwix St          16   \n",
-       "1       1001                 Forbes Ave & Market Square          19   \n",
-       "2       1002                        Third Ave & Wood St          15   \n",
-       "3       1003  First Ave & Smithfield St (Art Institute)          15   \n",
-       "4       1004               First Ave & B St (T Station)          15   \n",
-       "\n",
-       "    Latitude  Longitude  \n",
-       "0  40.441326 -80.004679  \n",
-       "1  40.440877 -80.003080  \n",
-       "2  40.439030 -80.001860  \n",
-       "3  40.437200 -80.000375  \n",
-       "4  40.435887 -79.997102  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "rentals_df.head()\n",
+    "\n",
     "stations_df = pd.read_csv('stations.csv', encoding='latin-1')\n",
     "stations_df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
